--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="%PUBLIC_URL%/profile.jpeg">
     <meta
       name="description"
-      content="Oshioke Daniel, Software developer"
+      content="Oshioke Daniel, Software Engineer"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Oshioke Daniel. Fullstack Developer</title>
+    <title>Oshioke Daniel. Software Engineer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
